# RTD_simulator

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  ROADMAP.md
benchmarks/: benchmark_simulation.py
docs/: plugins.md
profiling/: profile_simulation.py
rtd_simulator/: __init__.py  app.py  pyproject.toml  requirements.txt  setup.py
rtd_simulator/controller/: rtd_controller.py
rtd_simulator/controllers/: __init__.py  rtd_controller.py  simulation.py
rtd_simulator/docs/: memory_bank.md
rtd_simulator/model/: __init__.py  curve_analysis.py  rtd_model.py
rtd_simulator/models/: __init__.py  base.py  boundary.py  cache.py  curve_analysis.py  numerical.py  rtd_model.py  validation.py
rtd_simulator/models/examples/: basic_rtd.py
rtd_simulator/utils/: config_manager.py  logging.py
rtd_simulator/view/: __init__.py  animation_window.py  dialogs.py  main_window.py  parameter_sections.py  plotting.py
rtd_simulator/views/: __init__.py  custom_widgets.py  dialogs.py  main_window.py  parameter_sections.py  plot_style.py  plot_view.py  plotting.py
tests/: conftest.py  test_rtd_vectorization.py
tests/models/: test_rtd_models.py
